p3/configs/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
      - name: openresty
        image: hchorfi/iot-ssh:linux-v1
        ports:
          - containerPort: 80
            name: app-http
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    name: app
  ports:
  - name: app-http-svc
    protocol: TCP
    port: 8080
    targetPort: app-http
