p3/configs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      name: app2
  template:
    metadata:
      labels:
        name: app2
    spec:
      containers:
      - name: openresty
        image: hchorfi/iot-ssh:v2
        ports:
          - containerPort: 80
            name: app2-http
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    name: app2
  ports:
  - name: app2-http-svc
    protocol: TCP
    port: 8080
    targetPort: app2-http
